Added list of carriers to homepage to validate db to screen flow using api routes

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "next": "14.2.11",
     "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "shadcn": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
