--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,12 +1,10 @@
-FROM node:18-alpine
-
-# Install git
-RUN apk add --no-cache git
+FROM node:18
 
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
+RUN npm install pg @types/pg
 
 COPY . .
 
