--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "file-saver": "^2.0.5",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
-    "pg": "^8.12.0",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
     "shadcn": "^2.0.6",
@@ -42,7 +42,6 @@
     "@babel/preset-typescript": "^7.24.7",
     "@types/jest": "^29.5.13",
     "@types/node": "^20",
-    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "axios": "^1.7.7",
@@ -58,6 +57,7 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@types/pg": "^8.11.10"
   }
 }
