--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -32,7 +32,7 @@ services:
         condition: service_healthy
     command: npm run dev
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ["CMD-SHELL", "curl -s -o /dev/null -w '%{http_code}' http://localhost:3000/api/health | grep 200"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -53,7 +53,7 @@ services:
     command: >
       sh -c "
         echo 'Waiting for API to be ready...' &&
-        wget --retry-connrefused --waitretry=1 --read-timeout=20 --timeout=15 -t 10 http://nextjs:3000/api/health &&
+        wget --retry-connrefused --waitretry=1 --read-timeout=20 --timeout=15 -t 10 -O /dev/null http://nextjs:3000/api/health &&
         echo 'API is ready!' &&
         npm install
       "
