--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:integration": "jest --config jest.config.js",
-    "test:integration:watch": "jest --config jest.config.js --watchAll"
+    "test:integration": "jest --config jest.config.js --detectOpenHandles --runInBand",
+    "test:integration:watch": "jest --config jest.config.js --detectOpenHandles --runInBand --watchAll"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
@@ -51,13 +51,15 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "postcss": "^8",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.1.2",
     "typescript": "^5",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "@types/pg": "^8.11.10"
+    "@types/pg": "^8.11.10",
+    "@jest/globals": "^29.7.0"
   }
 }
