--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
-    "@types/node": "^20",
+    "@types/node": "^20.16.10",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "axios": "^1.7.7",
@@ -58,9 +60,7 @@
     "ts-jest": "^29.1.2",
     "typescript": "^5",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "@types/pg": "^8.11.10",
-    "@jest/globals": "^29.7.0"
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": "20.11.1",
