--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:integration": "jest --config jest.config.js --detectOpenHandles --runInBand",
-    "test:integration:watch": "jest --config jest.config.js --detectOpenHandles --runInBand --watchAll"
+    "test:integration:watch": "jest --config jest.config.js --detectOpenHandles --runInBand --watchAll",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
@@ -19,9 +20,12 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
@@ -33,6 +37,7 @@
     "shadcn": "^2.0.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
@@ -42,10 +47,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
-    "@types/node": "^20.16.10",
     "@types/pg": "^8.11.10",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "axios": "^1.7.7",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
@@ -58,12 +60,11 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
-    "typescript": "^5",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": "20.11.1",
-    "npm": "10.2.4"
+    "npm": "10.8.3"
   }
 }
