--- a/app.yml
+++ b/app.yml
@@ -2,14 +2,15 @@ name: your-nextjs-app
 services:
   - name: web
     git:
-      branch: main
+      branch: develop
       repo_clone_url: https://github.com/vicesoftware/truck-scout.git
+    build_command: npm ci && npm run build
     run_command: npm start
     environment_slug: node-js
     envs:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        value: ${DATABASE_URL}?sslmode=no-verify
+        value: ${DATABASE_URL}
       - key: NEXT_PUBLIC_API_URL
         value: ${NEXT_PUBLIC_API_URL}
