Yet another attempt to use standalone nextjs server to fix digital ocean deployment issues

--- a/app.yml
+++ b/app.yml
@@ -4,8 +4,8 @@ services:
     git:
       branch: develop
       repo_clone_url: https://github.com/vicesoftware/truck-scout.git
-    build_command: npm ci && npm run build && npm run export
-    run_command: npm start
+    build_command: npm ci && npm run build
+    run_command: node .next/standalone/server.js
     environment_slug: node-js
     envs:
       - key: NODE_ENV
