--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
