--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run Jest API tests
         run: |
           docker compose -f docker-compose.test.yml build
-          TEST_MODE=single docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test
+          TEST_MODE=single docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test --timeout 300
         env:
           TEST_MODE: single
 
