--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [develop]
 
+env:
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -16,13 +20,21 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # Updated to Node.js 20
+          node-version: '20'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Install Docker Compose
         run: |
@@ -32,10 +44,12 @@ jobs:
           chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
           docker compose version
 
+      - name: Build Docker images
+        run: docker compose -f docker-compose.test.yml build --parallel
+
       - name: Run Jest API tests
         run: |
-          docker compose -f docker-compose.test.yml build
-          TEST_MODE=single docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test --timeout 300
+          TEST_MODE=single docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test
         env:
           TEST_MODE: single
 
