--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run Jest API tests
         run: |
-          TEST_MODE=single docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test
+          docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test
         env:
           TEST_MODE: single
 
