--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -51,17 +51,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
       - name: Build and run Jest API tests
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile.test
+          push: false
+          load: true
+          tags: app-test:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Run tests
         run: |
-          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from test
+          docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test
         env:
           TEST_MODE: single
 
