--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -42,6 +42,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.test
+      target: runner
     environment:
       API_URL: http://nextjs:3000
       DATABASE_URL: postgresql://tms_test_user:test_password@postgres:5432/tms_test_db
@@ -49,8 +50,6 @@ services:
     volumes:
       - ./src:/app/src
       - ./test:/app/test
-      - ./package.json:/app/package.json
-      - ./package-lock.json:/app/package-lock.json
     depends_on:
       nextjs:
         condition: service_healthy
