--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,17 +1,20 @@
+# Base stage for dependencies
 FROM node:20-alpine AS deps
 WORKDIR /app
-
-# Copy package.json and package-lock.json
 COPY package.json package-lock.json ./
 RUN npm ci
 
+# Build stage
 FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
 
+# Test stage
 FROM node:20-alpine AS runner
 WORKDIR /app
-COPY --from=builder /app .
+COPY --from=deps /app/node_modules ./node_modules
+COPY --from=builder /app/.next ./.next
+COPY . .
 CMD ["npm", "run", "test"]
