--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:integration": "jest --config jest.config.js --detectOpenHandles --runInBand",
-    "test:integration:watch": "jest --config jest.config.js --detectOpenHandles --runInBand --watch"
+    "test:api": "jest --config jest.config.js --detectOpenHandles --runInBand",
+    "test:api:watch": "jest --config jest.config.js --detectOpenHandles --runInBand --watch"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
