Got all API tests passing and extracted environment tests to their own files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_DB: tms_db
+      POSTGRES_DB: tms_test_db
       POSTGRES_USER: tms_user
       POSTGRES_PASSWORD: secure_password_here
     volumes:
