--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DATABASE_URL=postgres://tms_user:secure_password_here@localhost:5432/tms_db
+DATABASE_URL=postgres://tms_test_user:test_password@localhost:5432/tms_test_db
 NEXT_PUBLIC_API_URL=http://localhost:3000
