--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:api": "dotenv -e .env.test -- jest --config jest.config.js --detectOpenHandles --runInBand",
-    "test:api:ci": "dotenv -e .env.test -- jest --config jest.config.js --detectOpenHandles --runInBand",
-    "test:api:watch": "dotenv -e .env.test -- jest --config jest.config.js --detectOpenHandles --runInBand --watch",
+    "test:api": "dotenv -e .env.test -- jest --config jest.config.js",
+    "test:api:ci": "jest --config jest.config.js",
+    "test:api:watch": "jest --config jest.config.js --watch",
     "test:start-db": "docker compose -f docker-compose.test.yml up -d postgres"
   },
   "dependencies": {
@@ -24,8 +24,8 @@
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@types/file-saver": "^2.0.7",
-    "@types/pg": "^8.11.10",
     "@types/node": "^20.16.10",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "class-variance-authority": "^0.7.0",
@@ -37,8 +37,8 @@
     "react": "^18",
     "react-dom": "^18",
     "shadcn": "^2.0.6",
-    "tailwindcss": "^3.4.1",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "usehooks-ts": "^3.1.0"
@@ -54,6 +54,7 @@
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "cypress": "^13.15.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "jest": "^29.7.0",
@@ -62,8 +63,7 @@
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "dotenv-cli": "^7.4.1"
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": "20.x",
