--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "dev:test": "NODE_ENV=test next dev",
-    "test:api:local": "TEST_ENV=local jest --config jest.config.js --detectOpenHandles --runInBand",
+    "test:api:local": "dotenv -e .env.test.local -- jest --config jest.config.js --detectOpenHandles --runInBand",
     "test:db:up": "docker compose -f docker-compose.test.local.yml up -d",
     "test:db:down": "docker compose -f docker-compose.test.local.yml down",
     "test:api:watch": "TEST_MODE=watch docker compose -f docker-compose.test.yml up --exit-code-from test test",
@@ -77,7 +77,8 @@
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "dotenv-cli": "^7.4.1"
   },
   "engines": {
     "node": "20.x",
