--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -97,6 +97,11 @@ jobs:
         run: |
           docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from test
         env:
+          NODE_ENV: test
+          ENVIRONMENT: test
+          DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          NEXT_PUBLIC_API_URL: ${{ secrets.TEST_API_URL }}
+          BRANCH_NAME: ${{ github.ref_name }}
           TEST_MODE: ci
 
       - name: Cleanup
