--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,30 +1,22 @@
-# Base stage for dependencies
-FROM node:20-alpine AS deps
+# Base stage
+FROM node:20-alpine as base
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci
 
-# Build stage
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+# First copy only package files to leverage Docker cache for dependencies
+COPY package*.json ./
+RUN npm ci --only=production
+
+# Then copy the rest of the application files
 COPY . .
-RUN npm run build
+
+# Development dependencies stage
+FROM base as dev-deps
+RUN npm ci
 
 # Test stage
-FROM node:20-alpine AS runner
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=builder /app/.next ./.next
-COPY . .
-CMD ["npm", "run", "test"]# syntax=docker/dockerfile:1
-
-FROM node:20-alpine AS base
-WORKDIR /app
-COPY package*.json ./
-RUN npm ci
-COPY . .
-
-FROM base AS test-runner
+FROM dev-deps as test
 ENV NODE_ENV=test
-CMD ["npm", "run", "test:api:local"]
+ENV ENVIRONMENT=test
+
+# Run tests
+CMD ["npm", "run", "test"]
