--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,20 +1,15 @@
 # Base stage
-FROM node:20-alpine as base
+FROM node:20-alpine AS base
 WORKDIR /app
 
-# First copy only package files to leverage Docker cache for dependencies
-COPY package*.json ./
-RUN npm ci --only=production
-
-# Then copy the rest of the application files
+# Copy all files first
 COPY . .
 
-# Development dependencies stage
-FROM base as dev-deps
+# Install all dependencies
 RUN npm ci
 
 # Test stage
-FROM dev-deps as test
+FROM base AS test
 ENV NODE_ENV=test
 ENV ENVIRONMENT=test
 
