--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,23 +1,4 @@
-# Base stage for dependencies
-FROM node:20-alpine AS deps
-WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci
-
-# Build stage
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-RUN npm run build
-
-# Test stage
-FROM node:20-alpine AS runner
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=builder /app/.next ./.next
-COPY . .
-CMD ["npm", "run", "test"]# syntax=docker/dockerfile:1
+# syntax=docker/dockerfile:1
 
 FROM node:20-alpine AS base
 WORKDIR /app
