--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,8 +3,9 @@
 FROM node:20-alpine AS base
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+RUN npm ci --ignore-scripts
 COPY . .
+RUN npm run build
 
 FROM base AS test-runner
 ENV NODE_ENV=test
