--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
+    "@prisma/client": "^5.22.0",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
@@ -71,7 +72,9 @@
     "eslint-config-next": "14.2.11",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "start-server-and-test": "^2.0.8",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
