--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:api:local": "TEST_ENV=local jest --config jest.config.js --detectOpenHandles --runInBand",
     "test:db:up": "docker compose -f docker-compose.test.local.yml up -d",
     "test:db:down": "docker compose -f docker-compose.test.local.yml down",
+    "test:db:reseed": "./reseed-db.sh",
     "test:api:watch": "TEST_MODE=watch docker compose -f docker-compose.test.yml up --exit-code-from test test",
     "test:api:ci": "jest --config jest.config.js --detectOpenHandles",
     "test:api:clean": "docker compose -f docker-compose.test.yml down",
