--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -3,9 +3,17 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - '**'
+      - develop
+      - main
   pull_request:
-    branches: [develop]
+    branches: 
+      - develop
+      - main
+
+# Prevent multiple concurrent runs of the same workflow
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   DOCKER_BUILDKIT: 1
