Enhance Carrier Testing and Development Infrastructure
- Improve carrier test suite with comprehensive CRUD and error handling tests
- Update Docker and database configurations for consistent test environments
- Add carrier testing requirements documentation
- Refactor Prisma schema and migration scripts
- Standardize database port and connection settings across local and CI environments

Key Changes:
- Enhanced carriers.test.ts with more robust testing
- Updated docker-compose files to use consistent port (5432)
- Created carrier-testing.md with detailed testing requirements
- Modified Prisma schema to enforce constraints
- Updated deployment and migration scripts
- Standardized test database configuration

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,10 @@
 docker-compose.yml
 docker-compose.*.yml
+
+# Prisma generated files
+**/generated/
+**/prisma/generated/
+node_modules/.prisma/
+@prisma/
+.prisma/
+prisma/generated/
