--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,9 +9,9 @@ services:
       POSTGRES_PASSWORD: test_password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d
     ports:
-      - "5433:5432"
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U tms_test_user -d tms_test_db"]
       interval: 5s
@@ -50,12 +50,19 @@ services:
       JEST_WORKERS: ${JEST_WORKERS:-50%}
       NODE_OPTIONS: "--max-old-space-size=4096"
     volumes:
+      - ./prisma:/app/prisma
       - ./src:/app/src
       - ./test:/app/test
+      - ./scripts:/app/scripts
     depends_on:
       nextjs:
         condition: service_healthy
-    command: npm run test:api:${TEST_MODE:-watch}
+    command: >
+      sh -c "
+        ENVIRONMENT=test DATABASE_URL=postgresql://tms_test_user:test_password@postgres:5432/tms_test_db \
+        sh scripts/deploy-migrations.sh && \
+        npm run test:api:${TEST_MODE:-watch}
+      "
 
 volumes:
   postgres_data:
