Added doctl to connect to Digital Ocean in .github/workflows/deploy-dev.yml to hopefully fix DB access issue

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install doctl to connect to Digital Ocean
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
