feat: enhance DO database connection handling
- Add directUrl to Prisma schema for SSL connections
- Update GitHub workflow with DIRECT_URL env var
- Add Digital Ocean doctl for improved connectivity

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -16,6 +16,7 @@ jobs:
 
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Checkout repository
